Fix styles content overflow

--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -1,8 +1,11 @@
 .header {
+  box-sizing: border-box;
   height: 64px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 10px;
   align-items: center;
   box-shadow: (0 2px 5px 0 rgba(0, 0, 0, 0.2));
   padding: 5px 20px;
@@ -12,6 +15,7 @@
     width: 46px;
     cursor: pointer;
     background: url('../../images/logo.svg') no-repeat;
+    flex-shrink: 0;
   }
 
   &__wrapper {
@@ -20,12 +24,15 @@
     justify-content: space-between;
     align-items: center;
     gap: 7px;
+    min-width: 0;
   }
 
   &__username {
     font-size: 16px;
     line-height: 18px;
-    max-width: 130px;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin: 0;
   }
 }
