--- a/src/components/Post/Post.styles.scss
+++ b/src/components/Post/Post.styles.scss
@@ -24,8 +24,14 @@
     padding: 0;
     margin: 0;
     font-style: italic;
-    max-width: 150px;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    flex-grow: 1;
+  }
+
+  &__buttons {
+    flex-shrink: 0;
   }
 
   &__attachment {
